--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     </table>
     <hr/>
     <footer>
+        <a href="./hobbies.html">Check Out My Hobbies</a>
         <p>I hereby declare that the information furnished above is true to the best of my knowledge.</p>
         <p style="text-align: center;">© 2023 Partha Sarathi Mondal</p>
     </footer>
