--- a/moreinfo.html
+++ b/moreinfo.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Other Details</title>
 </head>
 
 <body>
     <h3><u>OTHER DETAILS:</u></h3>
     <ul>
-
+        <li><b>Father's Name:</b> Debasish Mondal</li>
+        <li><b>Mother's Name:</b> Bandana Mondal</li>
+        <li><b>Date of Birth:</b> 6th November 1995</li>
+        <li><b>Gender:</b> Male</li>
+        <li><b>Caste:</b> General</li>
+        <li><b>Religion:</b> Hindu</li>
+        <li><b>Nationality:</b> Indian</li>
     </ul>
-    <li><b>Father's Name:</b> Debasish Mondal</li>
-    <li><b>Mother's Name:</b> Bandana Mondal</li>
-    <li><b>Date of Birth:</b> 6th November 1995</li>
-    <li><b>Gender:</b> Male</li>
-    <li><b>Caste:</b> General</li>
-    <li><b>Religion:</b> Hindu</li>
-    <li><b>Nationality:</b> Indian</li>
     <footer>
+        <a href="./hobbies.html">Check Out My Hobbies</a>
         <p>I hereby declare that the information furnished above is true to the best of my knowledge.</p>
         <p style="text-align: center;">© 2023 Partha Sarathi Mondal</p>
     </footer>
