--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <table style="align-items: center;width: 80%;">
         <tr>
             <th>ORGANIZATION</th>
-            <th>FORM DATE</th>
+            <th>FROM DATE</th>
             <th>TO DATE</th>
             <th>ROLE</th>
         </tr>
