ISSUE FIXED: certificate links not opening.

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     <ol>
         <li><a>Certificate course on JAVA & ORACLE from NIELIT in the year 2018</a></li>
         <li><a>TCS ION Career Edge Young Professionals, 2021</a></li>
-        <li><a href="www.guvi.in/verify-certificate?id=PZ9t459114N906B1US">Python Certificaton Course, 2023</a></li>
-        <li><a href="www.guvi.in/verify-certificate?id=13V2697w2ECR5y8217">AI for India 2.0, 2023</a></li>
+        <li><a href="https://www.guvi.in/verify-certificate?id=PZ9t459114N906B1US">Python Certificaton Course, 2023</a></li>
+        <li><a href="https://www.guvi.in/verify-certificate?id=13V2697w2ECR5y8217">AI for India 2.0, 2023</a></li>
     </ol>
     <hr/>
     <h3><u>PROJECTS:</u></h3>
