new projects added

--- a/index.html
+++ b/index.html
@@ -148,10 +148,24 @@
             <th>PROJECT LINKS</th>
         </tr>
         <tr style="text-align: center;">
+            <td>DanceMe</td>
+            <td>NCR Technosolutions</td>
+            <td>December 2023 - February 2024</td>
+            <td>Firebase, Firebase push notification, TypeScript, Redux, Foreground push notification, Realtime database, Stripe, Stripe Connect, Axios, Redux</td>
+            <td>-</td>
+        </tr>
+        <tr style="text-align: center;">
+            <td>OfficeinaBox2go</td>
+            <td>NCR Technosolutions</td>
+            <td>October 2023 - Present</td>
+            <td>TypeScript, Redux, Google Maps API, Google Places, Axios, Redux</td>
+            <td>-</td>
+        </tr>
+        <tr style="text-align: center;">
             <td>FOSA Restaurant</td>
             <td>NCR Technosolutions</td>
             <td>May 2023 - Present</td>
-            <td>Axios, React Native, Redux</td>
+            <td>Stripe terminal payment, Firebase push notification, Firebase, Tap to pay on iPhone, Stripe, Foreground push notification, Axios, Redux </td>
             <td>-</td>
         </tr>
         <tr style="text-align: center;">
